// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCard() 1`] = `
Object {
  "id": 2,
  "linkUrl": "//$BBB",
  "name": "$BBB",
  "type": "TICKER",
}
`;

exports[`createCard() 2`] = `
Object {
  "cardId": 2,
  "content": Object {
    "children": Array [
      Object {
        "children": Array [],
        "freeze": true,
        "head": "[!]",
        "id": 13,
        "op": "create",
        "userIds": Array [
          "bot",
        ],
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "freeze": true,
            "head": "$BBB <BUY> <SELL> <WATCH>",
            "id": 18,
            "op": "create",
            "pin": true,
            "pinCode": "BUYSELL",
            "userIds": Array [
              "bot",
            ],
          },
        ],
        "freeze": true,
        "head": "[?]",
        "id": 17,
        "op": "create",
        "userIds": Array [
          "bot",
        ],
      },
      Object {
        "children": Array [],
        "freeze": true,
        "head": "[*]",
        "id": 14,
        "op": "create",
        "userIds": Array [
          "bot",
        ],
      },
      Object {
        "children": Array [],
        "freeze": true,
        "head": "[+]",
        "id": 15,
        "op": "create",
        "userIds": Array [
          "bot",
        ],
      },
      Object {
        "children": Array [],
        "freeze": true,
        "head": "[-]",
        "id": 16,
        "op": "create",
        "userIds": Array [
          "bot",
        ],
      },
    ],
    "freeze": true,
    "head": "$BBB",
    "id": 12,
    "op": "create",
    "userIds": Array [
      "bot",
    ],
  },
  "id": 3,
  "prevId": null,
  "userId": "bot",
}
`;

exports[`createCardBody() 1`] = `
Object {
  "cardId": 1,
  "content": Object {
    "body": "111-111",
    "children": Array [
      Object {
        "body": "222-222",
        "children": Array [],
        "head": "222",
        "id": 7,
        "op": "create",
        "userIds": Array [
          "testuser0",
        ],
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "head": "444",
            "id": 9,
            "op": "create",
            "userIds": Array [
              "testuser0",
            ],
          },
          Object {
            "children": Array [],
            "head": "555",
            "id": 10,
            "op": "create",
            "userIds": Array [
              "testuser0",
            ],
          },
        ],
        "head": "333",
        "id": 8,
        "op": "create",
        "userIds": Array [
          "testuser0",
        ],
      },
    ],
    "head": "111",
    "id": 6,
    "op": "create",
    "userIds": Array [
      "testuser0",
    ],
  },
  "id": 1,
  "prevId": null,
  "userId": "testuser0",
}
`;

exports[`createCardBody() 2`] = `
Object {
  "cardId": 1,
  "content": Object {
    "body": "111-111+++",
    "children": Array [
      Object {
        "body": "222-222",
        "children": Array [],
        "head": "222",
        "id": 7,
        "op": "delete",
        "prevBody": "222-222",
        "prevHead": "222",
        "userIds": Array [
          "testuser0",
          "testuser1",
        ],
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "head": "444",
            "id": 9,
            "userIds": Array [
              "testuser0",
              "testuser1",
            ],
          },
        ],
        "head": "333",
        "id": 8,
        "userIds": Array [
          "testuser0",
          "testuser1",
        ],
      },
      Object {
        "children": Array [],
        "head": "555",
        "id": 10,
        "op": "move",
        "userIds": Array [
          "testuser0",
          "testuser1",
        ],
      },
      Object {
        "children": Array [],
        "head": "666",
        "id": 11,
        "op": "create",
        "userIds": Array [
          "testuser1",
        ],
      },
    ],
    "head": "111+++",
    "id": 6,
    "op": "update",
    "prevBody": "111-111",
    "prevHead": "111",
    "userIds": Array [
      "testuser0",
      "testuser1",
    ],
  },
  "id": 2,
  "prevId": 1,
  "userId": "testuser1",
}
`;

exports[`replaceBulletInput() 1`] = `
Object {
  "children": Array [
    Object {
      "freeze": true,
      "head": "[!]",
      "op": "create",
    },
    Object {
      "children": Array [
        Object {
          "freeze": true,
          "head": "$AAA <BUY> <SELL> <WATCH>",
          "op": "create",
          "pin": true,
          "pinCode": "BUYSELL",
        },
      ],
      "freeze": true,
      "head": "[?]",
      "op": "create",
    },
    Object {
      "freeze": true,
      "head": "[*]",
      "op": "create",
    },
    Object {
      "freeze": true,
      "head": "[+]",
      "op": "create",
    },
    Object {
      "freeze": true,
      "head": "[-]",
      "op": "create",
    },
  ],
  "freeze": true,
  "head": "$AAA",
  "op": "create",
}
`;

exports[`runBulletInputOp() 1`] = `
Object {
  "body": "111-111",
  "children": Array [
    Object {
      "body": "222-222",
      "children": Array [],
      "head": "222",
      "id": 2,
      "op": "create",
      "timestamp": 111111111,
      "userIds": Array [
        "testuser0",
      ],
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "head": "444",
          "id": 4,
          "op": "create",
          "timestamp": 111111111,
          "userIds": Array [
            "testuser0",
          ],
        },
        Object {
          "children": Array [],
          "head": "555",
          "id": 5,
          "op": "create",
          "timestamp": 111111111,
          "userIds": Array [
            "testuser0",
          ],
        },
      ],
      "head": "333",
      "id": 3,
      "op": "create",
      "timestamp": 111111111,
      "userIds": Array [
        "testuser0",
      ],
    },
  ],
  "head": "111",
  "id": 1,
  "op": "create",
  "timestamp": 111111111,
  "userIds": Array [
    "testuser0",
  ],
}
`;
